# functions-python

./: .gitignore  MANIFEST  MANIFEST.in  Pipfile  changelog.md  conftest.py  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: build.yml
arc/: __init__.py  events.py  http.py  queues.py  tables.py  ws.py
arc/_lib/: __init__.py
arc/events/: __init__.py
arc/http/: __init__.py
arc/http/helpers/: binary_types.py  parse_body.py  res_fmt.py
arc/http/session/: __init__.py  cookies.py  ddb.py  jwe.py
arc/lib/: utils.py
arc/queues/: __init__.py
arc/services/: __init__.py
arc/tables/: __init__.py
arc/ws/: __init__.py
architect/: events.py  http.py  queues.py  ws.py
scripts/: generate-pypi-readme.py
tests/: conftest.py  helper.py  test_env.py  test_events.py  test_http_parse_body.py  test_http_res.py  test_http_res_fmt.py  test_http_sessions.py  test_queues.py  test_reflect.py  test_services.py  test_tables.py  test_ws.py
