[project]
name = "architect-functions"
dynamic = ["version"]
description = "Runtime utility library for Functional Web Apps (FWAs) built with Architect (https://arc.codes)"
readme = "readme_pypi.md"
requires-python = ">=3.7"
dependencies = [
    "cryptography",
    "python-jose",
    "simplejson",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development"
]

[project.urls]
homepage = "https://arc.codes"
documentation = "https://arc.codes/docs/en/reference/runtime-helpers/python"
repository = "https://github.com/architect/functions-python"
changelog = "https://github.com/architect/functions-python/blob/main/changelog.md"

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
