[metadata]
name = architect-functions
author = Brian LeRoux
author_email = b@brian.io
license = Apache 2.0
description = Runtime helpers for Architect provisioned AWS Lambda functions
url = https://github.com/architect/functions-python

[options]
packages = find:
install_requires =
    python-jose @ https://github.com/mpdavis/python-jose/archive/master.zip#egg=python-jose

[options.packages.find]
include=arc*

[tool:pytest]
testpaths=tests/
